<resources>
    <string name="app_name">CalculatorDSA</string>
    <string name="num1">0</string>
    <string name="num2">0</string>
    <string name="resultado">0</string>
    <string name="Resultat">Resultat</string>
    <string name="Esborrar">esborrar</string>
    <string name="Historial"></string>
    <string name="Borrar"></string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="division">/</string>
    <string name="esborrar">Esborrar</string>
    <string name="historial">Historial</string>
    <string name="introdueix_2_valors">Introdueix 2 valors numerics enters i una operació.Després cliqueu a Resultat</string>
    <string name="resultat">Resultat</string>
    <string name="producto">x</string>
    <string name="borrar_historial">Borrar Historial</string>
    <string name="escoger_una_fila">Escoger una fila de calculo</string>
    <string name="historial2">Historial</string>
    <string name="volver">Volver</string>
    <string name="no">NO</string>
    <string name="quieres_borrar_el_historial">Quieres borrar el historial?</string>
    <string name="si">SI</string>

</resources>
