<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upc.eetac.dsa.calculatordsa.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introdueix_2_valors"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num1"
        android:layout_below="@+id/num1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"></EditText>

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num2"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/num2"
        android:layout_alignStart="@+id/num2"
        android:layout_marginTop="72dp"></EditText>

    <EditText
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        android:layout_below="@+id/num2"
        android:layout_alignLeft="@+id/num2"
        android:layout_alignStart="@+id/num2"
        android:layout_marginTop="33dp"
        android:numeric="signed|integer|decimal"
        tools:ignore="Deprecated"></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultat"
        android:id="@+id/button"
        android:layout_below="@+id/resultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="resultat"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esborrar"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="Esborrar"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/num1"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:id="@+id/groupRadio">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:id="@+id/radioButton"
            android:onClick="sumar"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:id="@+id/radioButton2"
            android:onClick="restar"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/producto"
            android:id="@+id/radioButton3"
            android:onClick="multiplicar"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:id="@+id/radioButton4"
            android:onClick="dividir"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historial"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="Historial"/>

</RelativeLayout>
