<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/historial2"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        tools:ignore="SpUsage" />

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            tools:ignore="SpUsage" />

    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/fila"
        android:hint="@string/escoger_una_fila" />

    <Button
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnVolver"
        android:text="@string/volver"
        android:layout_gravity="right"
        android:onClick="Volver"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBorrar"
        android:text="@string/borrar_historial"
        android:layout_gravity="center_horizontal"
        android:onClick="Borrar"/>

</LinearLayout>