<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.55"
        tools:ignore="InefficientWeight,UselessParent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si"
            android:id="@+id/btnSi"
            android:layout_gravity="left|center_vertical"
            android:onClick="noBorrar"
            tools:ignore="RtlHardcoded" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/btnNo"
            android:layout_gravity="right|center_vertical"
            android:onClick="siBorrar"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mensaje"
            android:text="@string/quieres_borrar_el_historial"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="0.10"
            android:autoText="false"
            android:textSize="25dp"
            tools:ignore="Deprecated,ObsoleteLayoutParam,SpUsage,TextViewEdits" />
    </FrameLayout>

</LinearLayout>